# rebar3_templates

./: LICENSE  Makefile.am  README.md  autotools_port.template  autotools_portdriver.template  c_src_Makefile_port.am  configure.ac  erlang_port.c  erlang_portdriver.c  gen_server.erl  gen_server.template  large_common_test_suite.erl  large_common_test_suite.template  small_common_test_suite.erl  small_common_test_suite.template
